# tachyonfx-renderer

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  build-wasm.sh  index.html
.github/workflows/: ci.yml  quick-test.yml
example/: README.md  package.json  tsconfig.json  webpack.config.js
example/src/: ansi-content.ts  index.html  index.ts
src/: app.rs  dispatcher.rs  effects.rs  event.rs  event_handler.rs  interop.rs  lib.rs  log.rs  main.rs  terminal.rs  theme.rs  wasm.rs
