[package]
name = "tachyonfx-renderer"
version = "0.2.1"
edition = "2024"
description = "WebAssembly terminal effects renderer for the browser"
license = "MIT"
repository = "https://github.com/junkdog/tachyonfx-renderer"
keywords = ["wasm", "terminal", "tui", "ratatui", "effects"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ansi-to-tui = "7.0.0"
console_error_panic_hook = "0.1"
eyre = "0.6.12"
ratatui = { version = "0.29.0", default-features = false }
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Location", "Window", "console"] }
web-time = "1.1.0"

[dependencies.ratzilla]
# path = "../ratzilla"
git = "https://github.com/orhun/ratzilla"
branch = "main"

[dependencies.tachyonfx]
git = "https://github.com/junkdog/tachyonfx"
branch = "development"
version = "0.20.0"
default-features = false
features = ["std", "dsl", "wasm"]
