[package]
name = "tachyonfx-renderer"
version = "0.3.0"
edition = "2024"
description = "WebAssembly terminal effects renderer for the browser"
license = "MIT"
repository = "https://github.com/junkdog/tachyonfx-renderer"
keywords = ["wasm", "terminal", "tui", "ratatui", "effects"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ansi-to-tui = "8.0.1"
console_error_panic_hook = "0.1"
eyre = "0.6.12"
ratatui = { version = "0.30.0", default-features = false }
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["Location", "Window", "console"] }
web-time = "1.1.0"

[dependencies.ratzilla]
path = "../ratzilla"

[dependencies.tachyonfx]
# git = "https://github.com/ratatui/tachyonfx"
# branch = "development"
version = "0.23.0"
default-features = false
features = ["std", "dsl", "wasm"]
